--- a/style.css
+++ b/style.css
@@ -54,3 +54,26 @@ section{
     background-repeat: no-repeat;
     background-position: right;
 }
+
+.single-experience{
+    box-shadow: 10px 10px 100px 10px dimgray;
+    border-radius: 0px;
+    height: 50%;
+}
+
+.experience{
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+#full-stack{
+    border-left: 5px solid;
+    border-image: linear-gradient(red, violet);
+    border-image-slice: 1;
+}
+
+#learner{
+    border-left: 5px solid;
+    border-image: linear-gradient(cyan, indigo);
+    border-image-slice: 1;
+}
