--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ section{
     box-shadow: 10px 10px 100px 10px dimgray;
     border-radius: 0px;
     height: 50%;
+    background-color: white;
 }
 
 .experience{
@@ -70,6 +71,7 @@ section{
     border-left: 5px solid;
     border-image: linear-gradient(red, violet);
     border-image-slice: 1;
+
 }
 
 #learner{
