--- a/style.css
+++ b/style.css
@@ -79,3 +79,8 @@ section{
     border-image: linear-gradient(cyan, indigo);
     border-image-slice: 1;
 }
+
+footer p{
+    text-align: center;
+    font-size: 12px;
+}
